refactor(epistola): drop per-execution scalars; rich-object is the only result surface
Single source of truth for generation results. Removes the duplicate path
where the catch-event correlation set per-execution scalars
(epistolaStatus, epistolaDocumentId, epistolaErrorMessage) in addition to
updating the rich Map on the configured resultProcessVariable.

Changes:

- EpistolaProcessVariables: drop STATUS, DOCUMENT_ID, ERROR_MESSAGE.
- EpistolaMessageCorrelationService: drop the .setVariable() calls on the
  correlation builder. updateResultVariable already wrote the rich object
  on the process-instance scope before correlation runs; that's the only
  write.
- EpistolaPlugin.generateDocument submit-failure path: write a FAILED rich
  object on resultProcessVariable instead of the legacy scalars.
- EpistolaPlugin.downloadDocument and EpistolaGenerationResource.downloadDocument:
  type-tolerant resolver for documentIdVariable. If the named variable
  holds a rich Map with a documentId key, dig that out; else expect a
  String. Lets users configure documentIdVariable: "epistolaResult" and
  have the backend extract the doc id from the rich object.

Test-app and bundled forms updated to use the canonical rich-object names:

- 5 process-link JSONs: resultProcessVariable -> "epistolaResult";
  documentIdVariable -> "epistolaResult" (or per-doc "requestId{N}" for
  the subsidy multi-doc case).
- 3 BPMN files: gateway expressions ${epistolaStatus == 'COMPLETED'} ->
  ${epistolaResult.status == 'COMPLETED'}.
- review-document.form.json: pv:epistolaStatus -> pv:epistolaResult.status,
  same for documentId. Valtimo's pv: prefix supports JSON-pointer dot-
  notation on read (FormIoFormDefinition.getProcessVar) so this works
  without further changes.
- Plugin-bundled retry form: pv:epistolaErrorMessage ->
  pv:epistolaResult.errorMessage. Assumes the canonical default name;
  document this in async.md.

Frontend defaults shifted to "epistolaResult":

- epistola-document Formio